--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,9 @@
+.heading {
+	margin-top: 30px;
+}
+
 .main {
 	margin-top: 30px;
-	text-align: center;
+	display: flex;
+	justify-content: center;
 }
