refactor & fix date picker

--- a/src/components/label/label.module.scss
+++ b/src/components/label/label.module.scss
@@ -1,12 +1,12 @@
 label {
 	font-weight: 500;
-	font-size: 14px;
+	font-size: 1.4rem;
 	width: 100%;
 	min-width: 257px;
 
 	div {
 		font-weight: 400;
-		font-size: 12px;
-		color: #000000;
+		font-size: 1.2rem;
+		color: #000;
 	}
 }
