--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,9 @@
 .heading {
-	margin-top: 30px;
+	margin-top: 3rem;
 }
 
 .main {
-	margin: 150px 0;
+	margin: 15rem 0;
 	display: flex;
 	justify-content: center;
 }
