--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,12 @@
 	margin: 0;
 }
 
+html {
+	font-size: 10px;
+}
+
 body {
-	margin: 0;
 	font-family: "Montserrat", sans-serif;
 	text-align: center;
+	font-size: 1.8rem;
 }
