--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -35,7 +35,7 @@ input[type="date"]::-webkit-clear-button {
 }
 
 input[type="date"]:focus {
-	box-shadow: 0 0 0.5rem $focus;
+	box-shadow: inset 0 0 0.5rem $focus;
 	border: 1px solid $focus;
 }
 
