--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -1,7 +1,8 @@
 //Colours
 $focus: #8859b6; //Passes WCAG AA - Graphical Objects and User Interface Components
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
 	outline: none;
 	border: 1px solid #dddddd;
 	width: 100%;
@@ -12,7 +13,9 @@ input[type="text"] {
 	box-sizing: border-box;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+,
+input[type="password"]:focus {
 	box-shadow: 0 0 0.5rem $focus;
 	border: 1px solid $focus;
 }
